# openapi/openapi.json
@@ -10,8 +10,484 @@
     "url" : "http://localhost",
     "description" : "Generated server url"
   } ],
-  "paths" : { },
+  "tags" : [ {
+    "description" : "API for read event and payload from table storage",
+    "name" : "Technical Support"
+  } ],
+  "paths" : {
+    "/api/ts/v1/organizations/{organizationId}/iuv/{iuv}" : {
+      "get" : {
+        "operationId" : "findByIuv",
+        "parameters" : [ {
+          "description" : "Id dell'EC",
+          "example" : 12345678900,
+          "in" : "path",
+          "name" : "organizationId",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Id dell'EC",
+            "example" : 12345678900
+          }
+        }, {
+          "description" : "Identificativo univoco del versamento",
+          "example" : 982273480765907,
+          "in" : "path",
+          "name" : "iuv",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Identificativo univoco del versamento",
+            "example" : 982273480765907
+          }
+        }, {
+          "description" : "Data di ricerca DA",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateFrom",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca DA",
+            "example" : "2024-03-18"
+          }
+        }, {
+          "description" : "Data di ricerca A",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateTo",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca A",
+            "example" : "2024-03-18"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ReEventResponse"
+                }
+              }
+            },
+            "description" : "Successfully retrieved event",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        },
+        "tags" : [ "Technical Support" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
+    },
+    "/api/ts/v1/organizations/{organizationId}/notice-number/{noticeNumber}" : {
+      "get" : {
+        "operationId" : "findByNoticeNumber",
+        "parameters" : [ {
+          "description" : "Id dell'EC",
+          "example" : 12345678900,
+          "in" : "path",
+          "name" : "organizationId",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Id dell'EC",
+            "example" : 12345678900
+          }
+        }, {
+          "description" : "Numero avviso",
+          "example" : 3982273480765907,
+          "in" : "path",
+          "name" : "noticeNumber",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Numero avviso",
+            "example" : 3982273480765907
+          }
+        }, {
+          "description" : "Data di ricerca DA",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateFrom",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca DA",
+            "example" : "2024-03-18"
+          }
+        }, {
+          "description" : "Data di ricerca A",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateTo",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca A",
+            "example" : "2024-03-18"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ReEventResponse"
+                }
+              }
+            },
+            "description" : "Successfully retrieved event",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        },
+        "tags" : [ "Technical Support" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
+    },
+    "/api/ts/v1/payload-ref-id/{payloadRefId}" : {
+      "get" : {
+        "operationId" : "getPayloadByPayloadRefId",
+        "parameters" : [ {
+          "description" : "Nome del file",
+          "example" : "2024-03-18_-230539074458600920",
+          "in" : "path",
+          "name" : "payloadRefId",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Nome del file",
+            "example" : "2024-03-18_-230539074458600920"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/PayloadResponse"
+                }
+              }
+            },
+            "description" : "Successfully retrieved gzip payload",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        },
+        "tags" : [ "Technical Support" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
+    },
+    "/api/ts/v1/session-id/{sessionId}" : {
+      "get" : {
+        "operationId" : "findBySessionId",
+        "parameters" : [ {
+          "description" : "Identificativo dell'operazione eseguita",
+          "example" : "fcfcbe1e-987a-4914-8fd2-d1e7b67762bf",
+          "in" : "path",
+          "name" : "sessionId",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Identificativo dell'operazione eseguita",
+            "example" : "fcfcbe1e-987a-4914-8fd2-d1e7b67762bf"
+          }
+        }, {
+          "description" : "Data di ricerca DA",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateFrom",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca DA",
+            "example" : "2024-03-18"
+          }
+        }, {
+          "description" : "Data di ricerca A",
+          "example" : "2024-03-18",
+          "in" : "query",
+          "name" : "dateTo",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "description" : "Data di ricerca A",
+            "example" : "2024-03-18"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ReEventResponse"
+                }
+              }
+            },
+            "description" : "Successfully retrieved event",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        },
+        "tags" : [ "Technical Support" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
+    }
+  },
   "components" : {
+    "schemas" : {
+      "PayloadResponse" : {
+        "type" : "object",
+        "properties" : {
+          "payload" : {
+            "type" : "string",
+            "description" : "Payload compresso GZIP",
+            "example" : "aaAAADdasdsada="
+          },
+          "payloadLength" : {
+            "type" : "integer",
+            "description" : "Lunghezza del payload",
+            "format" : "int64",
+            "example" : 347
+          },
+          "payloadRefId" : {
+            "type" : "string",
+            "description" : "Nome del payload",
+            "example" : "2024-03-18_-230539074458600920"
+          }
+        }
+      },
+      "ReEvent" : {
+        "type" : "object",
+        "description" : "Lista dei record trovati",
+        "properties" : {
+          "businessProcess" : {
+            "type" : "string",
+            "description" : "Campo che identifica il processo di business",
+            "example" : "nodoInviaRPT"
+          },
+          "canale" : {
+            "type" : "string",
+            "description" : "Identificativo del canale che eroga i servizi per il PSP",
+            "example" : "60000000001_01"
+          },
+          "categoriaEvento" : {
+            "type" : "string",
+            "description" : "Componente che identifica se Ã¨ un evento ai morsetti, ovvero di interfaccia, o interno, come cambio stato. Esempio: INTERFACCIA, INTERNO",
+            "example" : "INTERFACCIA"
+          },
+          "ccp" : {
+            "type" : "string",
+            "description" : "Codice contesto pagmaneto",
+            "example" : "TEST_4178733642"
+          },
+          "componente" : {
+            "type" : "string",
+            "description" : "Componente che identifica chi ha scritto l'evento. Esempio: FESP",
+            "example" : "FESP"
+          },
+          "creditorReferenceId" : {
+            "type" : "string",
+            "description" : "Identificativo univoco assegnato dall EC",
+            "example" : "982273480765907"
+          },
+          "erogatore" : {
+            "type" : "string",
+            "description" : "Chi espone la primitiva",
+            "example" : "NodoDeiPagamentiSPC"
+          },
+          "erogatoreDescr" : {
+            "type" : "string",
+            "description" : "Descrizione di chi espone la primitiva",
+            "example" : "NodoDeiPagamentiSPC"
+          },
+          "esito" : {
+            "type" : "string",
+            "description" : "Esito dell'operazione eseguita. Esempio: INVIATA, INVIATA_KO, RICEVUTA, RICEVUTA_KO, CAMBIO_STATO",
+            "example" : "INVIATA"
+          },
+          "fruitore" : {
+            "type" : "string",
+            "description" : "Chi utilizza la primitiva",
+            "example" : "11111111111_05"
+          },
+          "fruitoreDescr" : {
+            "type" : "string",
+            "description" : "Descrizione di chi utilizza la primitiva",
+            "example" : "11111111111_05"
+          },
+          "idDominio" : {
+            "type" : "string",
+            "description" : "Id dell'EC",
+            "example" : "12345678900"
+          },
+          "info" : {
+            "type" : "string",
+            "description" : "Informazioni generiche, es URI di chi ha chiamato o di chi sta chiamando",
+            "example" : "https://api.platform.pagopa.it/nodo/nodo-per-psp/v1"
+          },
+          "insertedTimestamp" : {
+            "type" : "string",
+            "description" : "Data di inserimento evento",
+            "format" : "date-time",
+            "example" : "2024-03-18T09:04:27.42017Z"
+          },
+          "iuv" : {
+            "type" : "string",
+            "description" : "Identificativo univoco versamento",
+            "example" : "982273480765907"
+          },
+          "noticeNumber" : {
+            "type" : "string",
+            "description" : "Numero avviso",
+            "example" : "3982273480765907"
+          },
+          "parametriSpecificiInterfaccia" : {
+            "type" : "string",
+            "description" : "Informazioni aggiuntive di chi ha chiamato o di chi sta chiamando",
+            "example" : "?standIn"
+          },
+          "payloadLength" : {
+            "type" : "integer",
+            "description" : "Lunghezza del payload",
+            "format" : "int32",
+            "example" : 347
+          },
+          "payloadRefId" : {
+            "type" : "string",
+            "description" : "Nome del payload",
+            "example" : "2024-03-18_-230539074458600920"
+          },
+          "paymentToken" : {
+            "type" : "string",
+            "description" : "Numero univoco del pagamento",
+            "example" : "AABB123"
+          },
+          "psp" : {
+            "type" : "string",
+            "description" : "Id del prestatore servizi di pagamento",
+            "example" : "60000000001"
+          },
+          "pspDescr" : {
+            "type" : "string",
+            "description" : "Descrizione del prestatore servizi di pagamento",
+            "example" : "PSP Test"
+          },
+          "sessionId" : {
+            "type" : "string",
+            "description" : "Identificativo dell'operazione eseguita",
+            "example" : "fcfcbe1e-987a-4914-8fd2-d1e7b67762bf"
+          },
+          "sessionIdOriginal" : {
+            "type" : "string",
+            "description" : "Identificativo dell'operazione asincrona giÃ  eseguita",
+            "example" : "982273480765907"
+          },
+          "sottoTipoEvento" : {
+            "type" : "string",
+            "description" : "Componente che identifica il tipo di morsetto in base alla categoriaEvento. Esempio: REQ, RESP, INTERN",
+            "example" : "RESP"
+          },
+          "standIn" : {
+            "type" : "boolean",
+            "description" : "Se il pagamneto Ã¨ eseguito in Stand-In",
+            "example" : true
+          },
+          "status" : {
+            "type" : "string",
+            "description" : "Stato dell'RPT o del Carrello se la categoriaEvento Ã¨ INTERN, altrienti Ã¨ null",
+            "example" : "RPT_RICEVUTA_NODO"
+          },
+          "stazione" : {
+            "type" : "string",
+            "description" : "Identificativo della stazione che eroga i servizi per la PA",
+            "example" : "11111111111_05"
+          },
+          "tipoEvento" : {
+            "type" : "string",
+            "description" : "Nome della primitiva",
+            "example" : "nodoInviaRPT"
+          },
+          "tipoVersamento" : {
+            "type" : "string",
+            "description" : "Tipo di pagmaneto. Esempio: BBT, BP, AD, CP, PO, OBEP, OTH, JIF, MYBK, PPAL",
+            "example" : "PO"
+          }
+        }
+      },
+      "ReEventResponse" : {
+        "type" : "object",
+        "properties" : {
+          "count" : {
+            "type" : "integer",
+            "description" : "Totale dei record trovati",
+            "format" : "int32",
+            "example" : 100
+          },
+          "data" : {
+            "type" : "array",
+            "description" : "Lista dei record trovati",
+            "items" : {
+              "$ref" : "#/components/schemas/ReEvent"
+            }
+          }
+        }
+      }
+    },
     "securitySchemes" : {
       "ApiKey" : {
         "description" : "The API key to access this function app.",
