# src/main/java/it/gov/pagopa/wispconverter/technicalsupport/controller/mapper/TechnicalSupportMapperDto.java
@@ -1,0 +1,19 @@
+package it.gov.pagopa.wispconverter.technicalsupport.controller.mapper;
+
+import it.gov.pagopa.wispconverter.technicalsupport.controller.model.PayloadResponse;
+import it.gov.pagopa.wispconverter.technicalsupport.controller.model.ReEvent;
+import it.gov.pagopa.wispconverter.technicalsupport.service.PayloadDto;
+import it.gov.pagopa.wispconverter.technicalsupport.service.ReEventDto;
+import org.mapstruct.Mapper;
+import org.mapstruct.ReportingPolicy;
+
+import java.util.List;
+
+@Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
+public interface TechnicalSupportMapperDto {
+
+  ReEvent toReEvent(ReEventDto source);
+  List<ReEvent> toReEventList(List<ReEventDto> reEventDtoList);
+
+  PayloadResponse toPayloadResponse(PayloadDto source);
+}
